# new_admin_panel_sprint_3

./: .gitignore  README.md  docker-compose.sqlite.yaml  docker-compose.yaml
django_api/: docker-compose.yaml
django_api/movies_admin/: docker-compose.dev.yaml  docker-compose.yaml
django_api/movies_admin/app/: Dockerfile  pyproject.toml  run.sh
django_api/movies_admin/nginx/: nginx.conf
etl/: .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  env_template  pyproject.toml  state.json  template_env
etl/etl/: main.py
etl/etl/logic/backoff/: backoff.py
etl/etl/logic/elastic_search/: elastic_search.py
etl/etl/logic/postgresql/: enrichers.py  extractors.py  interfaces.py  mergers.py  producers.py
etl/etl/logic/state/: state.py
etl/etl/logic/transform/: dataclasses.py
etl/etl/settings/: settings.py
etl/tests/: test.ipynb
movies_admin/: .bandit  docker-compose.dev.yaml  docker-compose.yaml  env_template
movies_admin/app/: Dockerfile
movies_admin/app/config/: settings.py  urls.py
movies_admin/app/config/components/: application.py
movies_admin/app/movies/: admin.py  models.py
movies_admin/nginx/: site.conf
sqlite_to_postgres/: Dockerfile  load_data.py  pyproject.toml  template_env
sqlite_to_postgres/logic/: data_types.py  postgres_saver.py  sqlite_extractor.py
sqlite_to_postgres/settings/: settings.py
sqlite_to_postgres/sqlite_to_postgres/: load_data.py
sqlite_to_postgres/sqlite_to_postgres/logic/: data_types.py  postgres_saver.py  sqlite_extractor.py
sqlite_to_postgres/sqlite_to_postgres/settings/: settings.py
(+4 files in other folders)
