[tool.poetry]
name = "sqlite-to-postgres"
version = "0.1.0"
description = ""
authors = ["Nikita <zigman.nikita@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlite_to_postgres"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
